# embed-rs-with-callbacks

./: .gitignore  README.md
embed-http-lib/: Cargo.toml
embed-http-lib/src/: get.rs  lib.rs  sleep.rs
embed-lib/: Cargo.toml
embed-lib/src/: lib.rs
src/: hget.cc  main.cc
